Fixing Swagger documentation, and populating the databases.
